test(access): simplify `AccessGroupResourceTest` and improve assertions
# Remove unused imports and ObjectMapper initialization.
# Replace `body.get(0)` with `body.getFirst` for cleaner code.
# Simplify assertion lambda expressions for single-line checks.
+ Add `Assertions.assertNotNull` for body validation in `create` test.